test/libsolidity/syntaxTests/parsing/interface_basic.sol
interface Interface {
	function f() public;
}
// ----
// TypeError: (23-43): Functions in interfaces must be declared external.
